fix: alignfull should match two edges

--- a/src/scss/blocks/core/_image.scss
+++ b/src/scss/blocks/core/_image.scss
@@ -15,7 +15,7 @@
 
 	&.alignfull {
 		figcaption {
-			width: calc( 100% - 2rem );
+			max-width: 100vw;
 		}
 	}
 }
