--- a/src/scss/wordpress-global/_alignment.scss
+++ b/src/scss/wordpress-global/_alignment.scss
@@ -18,9 +18,10 @@
 }
 
 .alignfull {
-	@apply left-1/2 relative;
+	@apply left-1/2 relative px-0;
 	margin-left: -50vw;
 
 	// Total width less vertical scroll bar.
 	width: calc( 100vw - 8.1px );
+	max-width: calc( 100vw - 8.1px );
 }
